--- a/pusat/laporan/index.html
+++ b/pusat/laporan/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" type="image/png" href="../../assets/logo.png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -32,6 +37,120 @@
                 transform: translateX(0);
                 opacity: 1;
             }
+        }
+
+        /* DataTables Custom Styling */
+        .dataTables_wrapper {
+            padding: 0;
+            overflow-x: auto;
+        }
+
+        table.dataTable {
+            width: 100% !important;
+            margin: 0 !important;
+        }
+
+        table.dataTable thead th {
+            background-color: #f9fafb;
+            color: #374151;
+            font-weight: 600;
+            font-size: 0.875rem;
+            padding: 12px 16px;
+            border-bottom: 2px solid #e5e7eb;
+            white-space: nowrap;
+        }
+
+        table.dataTable tbody td {
+            padding: 12px 16px;
+            font-size: 0.875rem;
+            color: #4b5563;
+        }
+
+        table.dataTable tbody tr:hover {
+            background-color: #f9fafb;
+        }
+
+        .dataTables_filter input {
+            border: 1px solid #d1d5db;
+            border-radius: 0.5rem;
+            padding: 0.5rem 0.75rem;
+            margin-left: 0.5rem;
+            font-size: 0.875rem;
+        }
+
+        .dataTables_filter input:focus {
+            outline: none;
+            border-color: #6366f1;
+            box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.2);
+        }
+
+        .dataTables_length select {
+            border: 1px solid #d1d5db;
+            border-radius: 0.5rem;
+            padding: 0.5rem;
+            margin: 0 0.5rem;
+            font-size: 0.875rem;
+        }
+
+        .dt-buttons {
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+            display: block !important;
+            width: 100% !important;
+            clear: both !important;
+        }
+
+        .dt-button {
+            background-color: #16a34a !important;
+            color: white !important;
+            border: none !important;
+            padding: 0.375rem 0.75rem !important;
+            border-radius: 0 !important;
+            font-size: 0.813rem !important;
+            font-weight: 500 !important;
+            margin-right: 0.5rem !important;
+            cursor: pointer !important;
+        }
+
+        .dt-button:hover {
+            background-color: #15803d !important;
+        }
+
+        .paginate_button {
+            padding: 0.5rem 0.75rem !important;
+            margin: 0 0.25rem !important;
+            border-radius: 0.375rem !important;
+            border: 1px solid #d1d5db !important;
+            background-color: white !important;
+            color: #374151 !important;
+        }
+
+        .paginate_button:hover {
+            background-color: #f3f4f6 !important;
+            border-color: #9ca3af !important;
+        }
+
+        .table-responsive {
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
+
+        .status-badge {
+            padding: 0.25rem 0.75rem;
+            border-radius: 9999px;
+            font-size: 0.75rem;
+            font-weight: 600;
+            display: inline-block;
+        }
+
+        .status-valid {
+            background-color: #d1fae5;
+            color: #065f46;
+        }
+
+        .status-expired {
+            background-color: #fee2e2;
+            color: #991b1b;
         }
     </style>
 </head>
@@ -216,8 +335,53 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Data Table Section from list.html -->
+            <div id="table-section" class="bg-white rounded-lg shadow-sm p-4 md:p-6 mt-6">
+                <div class="mb-4 flex flex-col sm:flex-row sm:justify-between sm:items-center gap-3">
+                    <h2 class="text-lg font-semibold text-gray-900">Daftar Laporan RTK</h2>
+                    <a href="./upload.html"
+                        class="inline-flex items-center justify-center px-4 py-2 bg-indigo-600 text-white text-sm font-medium rounded-lg hover:bg-indigo-700 transition-colors">
+                        <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12" />
+                        </svg>
+                        Upload RTK
+                    </a>
+                </div>
+                <div class="table-responsive">
+                    <table id="rtkTable" class="display" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>No</th>
+                                <th>Instansi (Provinsi)</th>
+                                <th>Tahun Berlaku</th>
+                                <th>Status</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- Data will be populated by JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
+
+    <!-- DataTables Buttons -->
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
 
     <script>
         // Toggle dropdown menu
@@ -503,6 +667,129 @@
                 }
             }
         });
+
+        // RTK Data for 38 Provinces (for Table)
+        const provinceData = [
+            { name: 'Nanggroe Aceh Darussalam', validUntil: 2023 },
+            { name: 'Sumatera Utara', validUntil: 2026 },
+            { name: 'Sumatera Selatan', validUntil: 2025 },
+            { name: 'Sumatera Barat', validUntil: 2027 },
+            { name: 'Bengkulu', validUntil: 2022 },
+            { name: 'Riau', validUntil: 2026 },
+            { name: 'Kepulauan Riau', validUntil: 2024 },
+            { name: 'Jambi', validUntil: 2025 },
+            { name: 'Lampung', validUntil: 2027 },
+            { name: 'Bangka Belitung', validUntil: 2023 },
+            { name: 'Kalimantan Barat', validUntil: 2026 },
+            { name: 'Kalimantan Timur', validUntil: 2028 },
+            { name: 'Kalimantan Selatan', validUntil: 2025 },
+            { name: 'Kalimantan Tengah', validUntil: 2024 },
+            { name: 'Kalimantan Utara', validUntil: 2023 },
+            { name: 'Banten', validUntil: 2027 },
+            { name: 'DKI Jakarta', validUntil: 2028 },
+            { name: 'Jawa Barat', validUntil: 2029 },
+            { name: 'Jawa Tengah', validUntil: 2027 },
+            { name: 'Daerah Istimewa Yogyakarta', validUntil: 2026 },
+            { name: 'Jawa Timur', validUntil: 2028 },
+            { name: 'Bali', validUntil: 2027 },
+            { name: 'Nusa Tenggara Timur', validUntil: 2024 },
+            { name: 'Nusa Tenggara Barat', validUntil: 2026 },
+            { name: 'Gorontalo', validUntil: 2023 },
+            { name: 'Sulawesi Barat', validUntil: 2024 },
+            { name: 'Sulawesi Tengah', validUntil: 2025 },
+            { name: 'Sulawesi Utara', validUntil: 2027 },
+            { name: 'Sulawesi Tenggara', validUntil: 2025 },
+            { name: 'Sulawesi Selatan', validUntil: 2028 },
+            { name: 'Maluku Utara', validUntil: 2023 },
+            { name: 'Maluku', validUntil: 2024 },
+            { name: 'Papua Barat', validUntil: 2022 },
+            { name: 'Papua', validUntil: 2023 },
+            { name: 'Papua Tengah', validUntil: 2022 },
+            { name: 'Papua Pegunungan', validUntil: 2023 },
+            { name: 'Papua Selatan', validUntil: 2024 },
+            { name: 'Papua Barat Daya', validUntil: 2023 }
+        ];
+
+        // Transform data for DataTable
+        const tableData = provinceData.map((province, index) => {
+            const isValid = province.validUntil >= currentYear;
+            const status = isValid ? 'Berlaku' : 'Tidak Berlaku';
+            const statusClass = isValid ? 'status-valid' : 'status-expired';
+
+            return [
+                index + 1,
+                province.name,
+                province.validUntil,
+                `<span class="status-badge ${statusClass}">${status}</span>`,
+                `<button onclick="viewFile('${province.name}')" class="px-4 py-2 bg-indigo-600 text-white text-sm rounded-lg hover:bg-indigo-700 transition-colors inline-flex items-center">
+                    <svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
+                    </svg>
+                    View
+                </button>`
+            ];
+        });
+
+        // Initialize DataTable
+        $(document).ready(function () {
+            $('#rtkTable').DataTable({
+                data: tableData,
+                dom: '<"row mb-3"<"col-sm-6"l><"col-sm-6"f>><"row mb-3"<"col-sm-12"B>>rtip',
+                buttons: [
+                    {
+                        extend: 'excel',
+                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg> Excel',
+                        title: 'Laporan RTK Provinsi',
+                        exportOptions: {
+                            columns: [0, 1, 2, 3]
+                        }
+                    },
+                    {
+                        extend: 'pdf',
+                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21h10a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v14a2 2 0 002 2z"/></svg> PDF',
+                        title: 'Laporan RTK Provinsi',
+                        exportOptions: {
+                            columns: [0, 1, 2, 3]
+                        }
+                    },
+                    {
+                        extend: 'print',
+                        text: '<svg class="w-4 h-4 inline mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 17h2a2 2 0 002-2v-4a2 2 0 00-2-2H5a2 2 0 00-2 2v4a2 2 0 002 2h2m2 4h6a2 2 0 002-2v-4a2 2 0 00-2-2H9a2 2 0 00-2 2v4a2 2 0 002 2zm8-12V5a2 2 0 00-2-2H9a2 2 0 00-2 2v4h10z"/></svg> Print',
+                        title: 'Laporan RTK Provinsi',
+                        exportOptions: {
+                            columns: [0, 1, 2, 3]
+                        }
+                    }
+                ],
+                pageLength: 10,
+                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
+                language: {
+                    search: "Cari:",
+                    lengthMenu: "Tampilkan _MENU_ data per halaman",
+                    info: "Menampilkan _START_ sampai _END_ dari _TOTAL_ data",
+                    infoEmpty: "Menampilkan 0 sampai 0 dari 0 data",
+                    infoFiltered: "(difilter dari _MAX_ total data)",
+                    paginate: {
+                        first: "Pertama",
+                        last: "Terakhir",
+                        next: "Selanjutnya",
+                        previous: "Sebelumnya"
+                    },
+                    zeroRecords: "Tidak ada data yang ditemukan",
+                    emptyTable: "Tidak ada data tersedia"
+                },
+                order: [[0, 'asc']],
+                columnDefs: [
+                    { orderable: false, targets: 4 }
+                ]
+            });
+        });
+
+        // View file function
+        function viewFile(provinceName) {
+            alert(`Membuka file RTK untuk ${provinceName}.\n\nCatatan: Dalam implementasi nyata, ini akan membuka halaman preview dokumen RTK.`);
+        }
     </script>
 </body>
 
