--- a/kab-kota/index.html
+++ b/kab-kota/index.html
@@ -180,7 +180,7 @@
             <!-- Line Chart: RTK Aktif per Tahun -->
             <div class="bg-white rounded-lg p-6 shadow-sm mb-6">
                 <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM per Tahun</h2>
+                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM yang Mengambil Kursus per Tahun</h2>
                     <div class="flex items-center gap-3">
                         <label for="fromYear" class="text-sm font-medium text-gray-700">Dari Tahun:</label>
                         <input type="number" id="fromYear" value="2021" min="2015" max="2025"
