--- a/pusat/index.html
+++ b/pusat/index.html
@@ -184,7 +184,7 @@
             <!-- Bar Chart: SDM per Provinsi -->
             <div class="bg-white rounded-lg p-6 shadow-sm mb-6">
                 <div class="flex items-center justify-between mb-6">
-                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM per Provinsi</h2>
+                    <h2 class="text-xl font-bold text-gray-900">Jumlah SDM yang Mengambil Kursus per Provinsi</h2>
                     <div class="flex items-center gap-2">
                         <label for="yearFilter" class="text-sm font-medium text-gray-700">Tahun:</label>
                         <select id="yearFilter"
